_sources/api/gen/other/2.8.0/classes/domain_Operation.Operation.md.txt
# Class: Operation

[domain/Operation](../modules/domain_Operation.md).Operation

## Constructors

### constructor

**new Operation**(`operationID`, `name`, `sendTime`, `createdTime`, `endTime`, `acceptedTime`, `callCenterId`, `caseFolderId`, `transmitterCode`, `alarmCategory`, `alarmEventCode`, `medicalCommander`, `medicalIncidentOfficer`, `attachedCustomerObject`, `alarmEventText`, `additionalInfo`, `keyNumber`, `electronicKey`, `radioGroupMain`, `radioGroupSecondary`, `additionalCoordinationInformation`, `availablePriorities`, `patientName`, `patientUID`, `vehicleStatus`, `destinationSiteLocation`, `breakpointLocation`, `availableHospitalLocations`, `header1`, `header2`, `eventInfo`, `caseInfo`, `selectedHospital`, `selectedPriority`, `operationState`, `leavePatientLocation`, `assignedResourceMissionNo`, `operationUnits`)

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `operationID` | `string` | The operation ID |
| `name` | `string` | The operation name |
| `sendTime` | `Date` | The time at which the operation was sent |
| `createdTime` | `Date` | The time at which the operation was created |
| `endTime` | `Date` | The time at which the operation ended, `undefined` still ongoing |
| `acceptedTime` | `Date` | The time at which the operation was accepted (PREVIEW) |
| `callCenterId` | `string` | The Call Center ID |
| `caseFolderId` | `string` | The Case folder ID |
| `transmitterCode` | `string` | The transmitter code |
| `alarmCategory` | `string` | The alarm category |
| `alarmEventCode` | `string` | The alarm event code |
| `medicalCommander` | `string` | The medical commander of this operation |
| `medicalIncidentOfficer` | `string` | The medical incident office of this operation |
| `attachedCustomerObject` | `string` | The attached customer Object |
| `alarmEventText` | `string` | The alarm event text |
| `additionalInfo` | `string` | The additional information attached to this operation |
| `keyNumber` | `string` | The key number |
| `electronicKey` | `string` | The electronic key |
| `radioGroupMain` | `string` | The main radio group associated with this operation |
| `radioGroupSecondary` | `string` | The secondary radio group associated with this operation |
| `additionalCoordinationInformation` | `string` | Additional coordination information |
| `availablePriorities` | [`OperationPriority`](domain_OperationPriority.OperationPriority.md)[] | The list of available priorities to select from |
| `patientName` | `string` | The name of the patient if any |
| `patientUID` | `string` | The personal number of the patient if any |
| `vehicleStatus` | [`VehicleStatus`](domain_VehicleStatus.VehicleStatus.md) | The current vehicle status in this operation |
| `destinationSiteLocation` | [`DestinationSiteLocation`](domain_DestinationSiteLocation.DestinationSiteLocation.md) | The location of the destination |
| `breakpointLocation` | [`DestinationControlPointLocation`](domain_DestinationControlPointLocation.DestinationControlPointLocation.md) | The location of the breakpoint if any |
| `availableHospitalLocations` | [`HospitalLocation`](domain_HospitalLocation.HospitalLocation.md)[] | The list of available hospitals to select from |
| `header1` | `string` | The case index 2 |
| `header2` | `string` | The case index 3 |
| `eventInfo` | `string` | The event description |
| `caseInfo` | `string` | The case info comment |
| `selectedHospital` | `number` | The id of the selected hospital [inside available hospitals] |
| `selectedPriority` | `number` | The id of the selected priority [inside available priority] |
| `operationState` | [`OperationState`](../enums/domain_OperationState.OperationState.md) | the current state of the operation (ACTIVE, AVAILABLE, COMPLETE) |
| `leavePatientLocation` | [`LeavePatientLocation`](domain_LeavePatientLocation.LeavePatientLocation.md) | The location of the leave-patient ('toCity', etc) |
| `assignedResourceMissionNo` | `string` | The Assigned Resource Mission No value from SOS |
| `operationUnits` | [`OperationUnit`](domain_OperationUnit.OperationUnit.md)[] | A list of the units that include the Assigned Resource values from SOS and the Units from the cloud |

## Properties

### acceptedTime

 **acceptedTime**: `Date`

The time at which the operation was accepted (PREVIEW)

___

### additionalCoordinationInformation

 **additionalCoordinationInformation**: `string`

Additional coordination information

___

### additionalInfo

 **additionalInfo**: `string`

The additional information attached to this operation

___

### alarmCategory

 **alarmCategory**: `string`

The alarm category

___

### alarmEventCode

 **alarmEventCode**: `string`

The alarm event code

___

### alarmEventText

 **alarmEventText**: `string`

The alarm event text

___

### assignedResourceMissionNo

 **assignedResourceMissionNo**: `string`

The Assigned Resource Mission No value from SOS

___

### attachedCustomerObject

 **attachedCustomerObject**: `string`

The attached customer Object

___

### availableHospitalLocations

 **availableHospitalLocations**: [`HospitalLocation`](domain_HospitalLocation.HospitalLocation.md)[]

The list of available hospitals to select from

___

### availablePriorities

 **availablePriorities**: [`OperationPriority`](domain_OperationPriority.OperationPriority.md)[]

The list of available priorities to select from

___

### breakpointLocation

 **breakpointLocation**: [`DestinationControlPointLocation`](domain_DestinationControlPointLocation.DestinationControlPointLocation.md)

The location of the breakpoint if any

___

### callCenterId

 **callCenterId**: `string`

The Call Center ID

___

### caseFolderId

 **caseFolderId**: `string`

The Case folder ID

___

### caseInfo

 **caseInfo**: `string`

The case info comment

___

### createdTime

 **createdTime**: `Date`

The time at which the operation was created

___

### destinationSiteLocation

 **destinationSiteLocation**: [`DestinationSiteLocation`](domain_DestinationSiteLocation.DestinationSiteLocation.md)

The location of the destination

___

### electronicKey

 **electronicKey**: `string`

The electronic key

___

### endTime

 **endTime**: `Date`

The time at which the operation ended, `undefined` still ongoing

___

### eventInfo

 **eventInfo**: `string`

The event description

___

### header1

 **header1**: `string`

The case index 2

___

### header2

 **header2**: `string`

The case index 3

___

### keyNumber

 **keyNumber**: `string`

The key number

___

### leavePatientLocation

 **leavePatientLocation**: [`LeavePatientLocation`](domain_LeavePatientLocation.LeavePatientLocation.md)

The location of the leave-patient ('toCity', etc)

___

### medicalCommander

 **medicalCommander**: `string`

The medical commander of this operation

___

### medicalIncidentOfficer

 **medicalIncidentOfficer**: `string`

The medical incident office of this operation

___

### name

 **name**: `string`

The operation name

___

### operationID

 **operationID**: `string`

The operation ID

___

### operationState

 **operationState**: [`OperationState`](../enums/domain_OperationState.OperationState.md)

the current state of the operation (ACTIVE, AVAILABLE, COMPLETE)

___

### operationUnits

 **operationUnits**: [`OperationUnit`](domain_OperationUnit.OperationUnit.md)[]

A list of the units that include the Assigned Resource values from SOS and the Units from the cloud

___

### patientName

 **patientName**: `string`

The name of the patient if any

___

### patientUID

 **patientUID**: `string`

The personal number of the patient if any

___

### radioGroupMain

 **radioGroupMain**: `string`

The main radio group associated with this operation

___

### radioGroupSecondary

 **radioGroupSecondary**: `string`

The secondary radio group associated with this operation

___

### selectedHospital

 **selectedHospital**: `number`

The id of the selected hospital [inside available hospitals]

___

### selectedPriority

 **selectedPriority**: `number`

The id of the selected priority [inside available priority]

___

### sendTime

 **sendTime**: `Date`

The time at which the operation was sent

___

### transmitterCode

 **transmitterCode**: `string`

The transmitter code

___

### vehicleStatus

 **vehicleStatus**: [`VehicleStatus`](domain_VehicleStatus.VehicleStatus.md)

The current vehicle status in this operation

## Methods

### getFullId

**getFullId**(): `string`

Gets the full operation ID, e.g. '1:18:6546', composed by 'callCenterId:caseFolderId:operationID'.

#### Returns

`string`

id The full operation ID

___

### fromJSON

`Static` **fromJSON**(`data`): [`Operation`](domain_Operation.Operation.md)

Create from JSON

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `data` | `any` | JSON object |

#### Returns

[`Operation`](domain_Operation.Operation.md)
